--- a/cs/trunk/ObjectListView/ObjectListView2019Net5.csproj
+++ b/cs/trunk/ObjectListView/ObjectListView2019Net5.csproj
@@ -2,16 +2,16 @@
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
     <ApplicationIcon />
     <StartupObject />
 
-    <PackageId>ObjectListView.Repack.Core3</PackageId>
+    <PackageId>ObjectListView.Repack.Core5</PackageId>
     <Authors>FizzCode Ltd.</Authors>
     <PackageLicenseUrl>https://github.com/FizzcodeSoftware/ObjectListViewRepack/blob/master/cs/trunk/COPYING</PackageLicenseUrl>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <Product>ObjectListView (repack for .NET Core 3.x)</Product>
+    <Product>ObjectListView (repack for .NET 5.x)</Product>
     <Description>ObjectListView is a .NET ListView wired on caffeine, guarana and steroids. More calmly, it is a C# wrapper around a .NET ListView, which makes the ListView much easier to use and teaches it lots of neat new tricks.</Description>
     <Copyright>Copyright 2006-2016 Bright Ideas Software</Copyright>
     <RepositoryUrl>https://github.com/FizzcodeSoftware/ObjectListViewRepack</RepositoryUrl>
